# IDS706-Indiv-2-Rust-SQLite

./: .gitignore  Cargo.toml  Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt  script.py  test_lib.py  test_script.py
.github/workflows/: format.yml  install.yml  lint.yml  main.yml  test.yml
data/: stock_AAPL.csv  stock_AAPL.db  stock_AAPL_stats.db
src/: lib.py  main.py  main.rs
